--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,28 @@
 *.exe
 *.out
 *.app
+
+# XCode
+*.xcodeproj
+
+# Visual Studio
+*.sln
+*.sqlite
+*.vsidx
+*.opendb
+*.db-wal
+*.db-shm
+*.wsuo
+*.testlog
+*.manifest
+*.ipch
+*.json
+*.vcxproj
+*.filters
+*.user
+*.recipe
+*.lastbuildstate
+*.db
+unsuccessfulbuild
+*.ilk
+*.tlog
